# parametrized-tokamak-source

./: .gitignore  README.md  pyproject.toml
examples/: plot_tokamak_source.py
notebooks/: example.ipynb  example.py  test_with_openmc.ipynb
src/parametrized_tokamak_source/: __init__.py  distribution_openmc.py  parametrized_tokamak_source.py  reaction_rates.py
src/parametrized_tokamak_source/data/: iter-parametrization.csv
tests/: test_parametrized_tokamak_source.py
